--- a/WPF Hello World/WPF Hello World/MainWindow.xaml
+++ b/WPF Hello World/WPF Hello World/MainWindow.xaml
@@ -6,7 +6,11 @@
         xmlns:local="clr-namespace:WPF_Hello_World"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+    <Grid Margin="0,0,-85,-92">
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="84,42,0,0" VerticalAlignment="Top" Width="74"/>
+        <RadioButton x:Name="radioButton" Content="RadioButton" HorizontalAlignment="Left" Margin="84,180,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="279,42,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="300,180,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="69" Width="99"/>
+
     </Grid>
 </Window>
